# apm-projectrunner

./: .dockerignore  .env.example  .gitignore  AGENTMISTAKES.md  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  compose.yaml  features.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: rust.yml
crates/router-config/: Cargo.toml
crates/router-config/src/: lib.rs  v1alpha1.rs
crates/router-config/tests/: contracts.rs
crates/router-config/tests/compat/: host-router-lan.json
crates/router-config/tests/fixtures/invalid/: duplicate-listeners.json  incompatible-protocols.json  incomplete-group.json  lan-bind-without-opt-in.json  lan-non-loopback-provider.json  lan-opt-in-without-acknowledgement.json  missing-provider.json  tailscale-publication-without-lan.json
crates/router-config/tests/fixtures/valid/: routing-matrix.json  v1alpha1-minimal.json
crates/router-core/: Cargo.toml
crates/router-core/src/: lib.rs
crates/router-core/tests/: ambiguity.rs  engine.rs
crates/router-pingora/: Cargo.toml
crates/router-pingora/src/: lib.rs
crates/router-pingora/tests/: grpc_h2c.rs  http_proxy.rs
crates/router-tcp/: Cargo.toml
crates/router-tcp/src/: lib.rs
crates/router-tcp/tests/: tcp_proxy.rs
crates/switchyard-adapter-sdk/: Cargo.toml
crates/switchyard-adapter-sdk/src/: lib.rs
crates/switchyard-adapters/: Cargo.toml
crates/switchyard-adapters/src/: lib.rs
crates/switchyard-cli/: Cargo.toml  build.rs
crates/switchyard-cli/src/: admin.rs  browser.rs  cli.rs  diagnostics.rs  host_runtime.rs  init.rs  lan_preflight.rs  main.rs  runtime.rs  tailscale_publication.rs
crates/switchyard-cli/templates/init/: README.md  deployment.yaml  gitignore
crates/switchyard-cli/templates/init/.agents/skills/switchyard-project/: SKILL.md
crates/switchyard-cli/templates/init/.agents/skills/switchyard-project/agents/: openai.yaml
crates/switchyard-cli/templates/init/overlays/: dev.yaml
crates/switchyard-cli/tests/: daemon_parity.rs
crates/switchyard-daemon/: Cargo.toml
crates/switchyard-daemon/src/: client.rs  contract.rs  device.rs  lib.rs  main.rs  server.rs
crates/switchyard-daemon/tests/: api.rs
crates/switchyard-ops/: Cargo.toml
crates/switchyard-ops/src/: connections.rs  devices.rs  execution.rs  instances.rs  lib.rs  profiles.rs  projections.rs  run_scripts.rs
crates/switchyard-planner/: Cargo.toml
crates/switchyard-planner/src/: bundle.rs  lib.rs  model.rs  overlay.rs
crates/switchyard-planner/tests/: compat.rs  planner.rs  real_codebase_fixtures.rs
crates/switchyard-planner/tests/compat/: jas-base-deployment.yaml  routing-matrix-deployment.yaml
crates/switchyard-planner/tests/fixtures/: deployment.yaml  process-compose.yaml
crates/switchyard-planner/tests/golden/: consumer-a-router.json
crates/switchyard-router/: Cargo.toml
crates/switchyard-router-admin/: Cargo.toml
crates/switchyard-router-admin/src/: lib.rs
crates/switchyard-router/src/: forward_proxy.rs  host_gateway.rs  lib.rs  main.rs
crates/switchyard-router/tests/: admin.rs  host_gateway.rs  phase3_exit_gate.rs
crates/switchyard-sources/: Cargo.toml
crates/switchyard-sources/src/: lib.rs
crates/switchyard-state/: Cargo.toml
crates/switchyard-state/src/: lib.rs
crates/switchyard-state/src/migrations/: 001_initial.sql  002_routes.sql  003_live_routes.sql  004_sources.sql  005_devices.sql  006_profiles.sql  007_device_eligibility.sql
crates/switchyard-tui/: Cargo.toml
crates/switchyard-tui/src/: app.rs  execution.rs  handoff.rs  help.rs  lib.rs  run_scripts.rs  shell.rs  state.rs  tasks.rs  terminal.rs
crates/switchyard-tui/src/dialogs/: confirm.rs  forms.rs  mod.rs  wizard.rs
crates/switchyard-tui/src/tabs/: code.rs  connections.rs  devices.rs  home.rs  instances.rs  mod.rs  operations.rs  profiles.rs
crates/switchyard-tui/src/views/: connections.rs  devices.rs  home.rs  instances.rs  mod.rs  profiles.rs  sources.rs
docs/: adapters.md  browser-routing.md  bundles.md  control-plane-api.md  development.md  gui.md  mvp-acceptance.md  new_tui_features.md  overlays.md  release-notes-template.md  release.md  router.md  security-review.md  support-policy.md  tui-appcui-design.md  tui.md  upgrade-recovery.md
examples/jas-base/: Dockerfile  Dockerfile.dockerignore  README.md  contract.yaml  deployment.yaml  fixture.rs  initialize-databases.sh  process-compose  smoke.sh
examples/jas-base/overlays/: feature.yaml  main.yaml
examples/jas-base/sources/feature/: process-compose.yaml  start-jas-service.sh
examples/routing-matrix/: Dockerfile  Dockerfile.dockerignore  README.md  compose.yaml  contract.yaml  deployment.yaml  fixture.rs  router-backend-1.json  router-backend-2.json  smoke.sh
extensions/switchyard-route/: README.md  manifest.json  popup.css  popup.html  popup.js  routes.js  service-worker.js
old/shared-database-portless-demo/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  features.md  package-lock.json  package.json
old/shared-database-portless-demo/scripts/: smoke-test.sh  start-compose.sh  stop-compose.sh
old/shared-database-portless-demo/src/: app.js  server.js
old/shared-database-portless-demo/test/: app.test.js
scripts/: bootstrap  check.sh  phase4-proof.sh  phase5-proof.sh  phase6-proof.sh  release-smoke.sh  release.sh  reliability.sh  smoke-test.sh  start-compose.sh  stop-compose.sh  tui-smoke.py
scripts/release-assets/: install.sh  uninstall.sh
src/: app.js  server.js
test/: app.test.js
