[workspace]
members = [
    "crates/router-config",
    "crates/router-core",
    "crates/router-pingora",
    "crates/router-tcp",
    "crates/switchyard-cli",
    "crates/switchyard-planner",
    "crates/switchyard-router",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
