[package]
name = "router-config"
description = "Versioned Switchyard router configuration contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.140"

[lints]
workspace = true
