[package]
name = "router-core"
description = "Route matching, snapshots, and transition policy for Switchyard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
router-config = { path = "../router-config" }
serde_json = "1.0.140"
sha2 = "0.10.8"

[lints]
workspace = true
