[package]
name = "router-pingora"
description = "HTTP-family data plane for the Switchyard router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
pingora = { version = "0.8.1", features = ["proxy", "rustls"] }
router-config = { path = "../router-config" }
router-core = { path = "../router-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
subtle = "2.6.1"
tokio = { version = "1.44.1", features = ["net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
h2 = "0.4.8"
http = "1.3.1"

[lints]
workspace = true
