[package]
name = "switchyard-adapters"
description = "Built-in source, execution, supervisor, route, and probe adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
switchyard-adapter-sdk = { path = "../switchyard-adapter-sdk" }

[lints]
workspace = true
