[package]
name = "switchyard-cli"
description = "One-shot Docker lifecycle CLI for Switchyard deployments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "switchyard"
path = "src/main.rs"

[dependencies]
router-config = { path = "../router-config" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
switchyard-planner = { path = "../switchyard-planner" }

[lints]
workspace = true
