[package]
name = "switchyard-cli"
description = "One-shot Docker lifecycle CLI for Switchyard deployments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "switchyard"
path = "src/main.rs"

[dependencies]
router-config = { path = "../router-config" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
switchyard-planner = { path = "../switchyard-planner" }
switchyard-daemon = { path = "../switchyard-daemon" }
switchyard-router-admin = { path = "../switchyard-router-admin" }

[dev-dependencies]
axum = "0.8.8"
http-body-util = "0.1.3"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
tower = "0.5.3"

[lints]
workspace = true
