[package]
name = "switchyard-daemon"
description = "Local authenticated HTTP control plane for Switchyard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "switchyard-daemon"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
futures-util = "0.3.32"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
router-config = { path = "../router-config" }
sha2 = "0.10.8"
switchyard-state = { path = "../switchyard-state" }
switchyard-adapters = { path = "../switchyard-adapters" }
switchyard-planner = { path = "../switchyard-planner" }
switchyard-router-admin = { path = "../switchyard-router-admin" }
switchyard-sources = { path = "../switchyard-sources" }
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.20.0"
tower = "0.5.3"

[lints]
workspace = true
