[package]
name = "switchyard-ops"
description = "Shared operations and read-model projections for Switchyard clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
sha2 = "0.10.8"
switchyard-daemon = { path = "../switchyard-daemon" }
switchyard-planner = { path = "../switchyard-planner" }
switchyard-sources = { path = "../switchyard-sources" }
switchyard-state = { path = "../switchyard-state" }

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
