[package]
name = "switchyard-planner"
description = "Pure deployment planning and generated Compose artifacts for Switchyard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
http = "1.3.1"
router-config = { path = "../router-config" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
sha2 = "0.10.8"
switchyard-adapter-sdk = { path = "../switchyard-adapter-sdk" }
switchyard-adapters = { path = "../switchyard-adapters" }

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
