[package]
name = "switchyard-router-admin"
description = "Shared typed client for the Switchyard router administration channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
router-config = { path = "../router-config" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lints]
workspace = true
