[package]
name = "switchyard-router"
description = "Switchyard router process and local administration channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
http = "1.3.1"
rcgen = "0.13.2"
router-config = { path = "../router-config" }
router-core = { path = "../router-core" }
router-pingora = { path = "../router-pingora" }
router-tcp = { path = "../router-tcp" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
time = "=0.3.41"
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
bytes = "1.10.1"
h2 = "0.4.8"
rustls = { version = "0.23.28", default-features = false, features = ["ring", "std", "tls12"] }
tempfile = "3.20.0"

[lints]
workspace = true
