[package]
name = "switchyard-router"
description = "Switchyard router process and local administration channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
router-config = { path = "../router-config" }
router-core = { path = "../router-core" }
router-pingora = { path = "../router-pingora" }
router-tcp = { path = "../router-tcp" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[lints]
workspace = true
