[package]
name = "switchyard-sources"
description = "Non-destructive Git source and managed worktree lifecycle for Switchyard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
switchyard-adapter-sdk = { path = "../switchyard-adapter-sdk" }
switchyard-adapters = { path = "../switchyard-adapters" }
switchyard-state = { path = "../switchyard-state" }

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
