[package]
name = "switchyard-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32.1", features = ["backup", "bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
