[package]
name = "switchyard-tui"
description = "Terminal control plane for Switchyard projects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crossterm = "=0.28.1"
ratatui = "=0.29.0"
signal-hook = "0.3.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
switchyard-daemon = { path = "../switchyard-daemon" }
switchyard-planner = { path = "../switchyard-planner" }
switchyard-sources = { path = "../switchyard-sources" }
switchyard-state = { path = "../switchyard-state" }

[lints]
workspace = true
