[package]
name = "switchyard-tui"
description = "Terminal control plane for Switchyard projects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
appcui = "=0.4.13"
signal-hook = "0.3.18"
switchyard-ops = { path = "../switchyard-ops" }
switchyard-sources = { path = "../switchyard-sources" }
switchyard-state = { path = "../switchyard-state" }

[lints]
workspace = true
